<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/abc_dialog_padding_material">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_dialog_item_code"
        android:id="@+id/textView5"
        app:layout_row="1"
        app:layout_column="0"
        android:textColor="@color/abc_primary_text_material_light"
        app:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_import_item_code_spinner"
        app:layout_row="1"
        app:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_dialog_item_name"
        android:id="@+id/textView16"
        app:layout_row="0"
        app:layout_column="0"
        android:textColor="@color/abc_primary_text_material_light"
        app:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_import_item_name_spinner"
        app:layout_row="0"
        app:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_dialog_item_category"
        android:id="@+id/textView17"
        app:layout_row="2"
        app:layout_column="0"
        android:textColor="#000"
        app:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_import_category_spinner"
        app:layout_row="2"
        app:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_dialog_item_balance"
        android:id="@+id/textView18"
        app:layout_row="3"
        app:layout_column="0"
        android:textColor="#000"
        app:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_import_balance_spinner"
        app:layout_row="3"
        app:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_dialog_item_location"
        android:id="@+id/textView19"
        app:layout_row="4"
        app:layout_column="0"
        android:textColor="#000"
        app:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_import_location_spinner"
        app:layout_row="4"
        app:layout_column="1" />
</android.support.v7.widget.GridLayout>