<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- We've embedded the GridLayout inside a RelativeLayout and not made it the
    root view element so we can center it in the dialog UI. Otherwise it will left aligned-->
    <android.support.v7.widget.GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/layout_company_profile"
        app:columnCount="3"
        app:rowCount="2"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/dialog_show_company_profile_btn_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_action_edit_grey"
            app:layout_column="0"
            app:layout_row="0"
            android:layout_marginRight="16dp"
            app:layout_gravity="center_vertical"
            android:background="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_view_company_profile_name"
            android:textColor="#111"
            android:textSize="24dp"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/dialog_show_company_profile_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Coca Cola S.C"
            android:textColor="#333"
            android:textSize="22dp"
            app:layout_column="2"
            app:layout_row="0"
            app:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_view_company_profile_payment_number"
            android:textColor="#111"
            android:textSize="24dp"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/dialog_show_company_profile_payment_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="#cfd8dc"
            android:padding="8dp"
            android:text="234#-k89"
            android:textColor="#111"
            android:textSize="18dp"
            app:layout_column="2"
            android:layout_marginTop="16dp" />

    </android.support.v7.widget.GridLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/dialog_show_company_profile_btn_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        app:fb_defaultColor="#ffd54f"
        app:fb_focusColor="#f9a825"
        app:fb_radius="3dp"
        app:fb_text="@string/dialog_view_company_profile_import_btn"
        app:fb_textColor="#333"
        app:fb_textSize="16sp"
        app:fb_iconResource="@drawable/ic_action_new_import"
        app:fb_iconPosition="left"
        android:layout_below="@+id/layout_company_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
